--- a/data_to_hdf5_v3.ipynb
+++ b/data_to_hdf5_v3.ipynb
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing sequences: 100%|█████████▉| 49999/50000 [00:02<00:00, 20128.17it/s]\n"
+      "Processing sequences: 100%|██████████| 50000/50000 [00:02<00:00, 19840.42it/s]\n"
      ]
     },
     {
@@ -166,9 +166,9 @@
      "output_type": "stream",
      "text": [
       "Finished processing.\n",
-      "\tTrain sequences:\t40,020\t(80.04%)\n",
-      "\tValidation sequences:\t4,956\t(9.91%)\n",
-      "\tTest sequences:\t\t5,024\t(10.05%)\n"
+      "\tTrain sequences:\t39,956\t(79.91%)\n",
+      "\tValidation sequences:\t4,995\t(9.99%)\n",
+      "\tTest sequences:\t\t5,049\t(10.10%)\n"
      ]
     }
    ],
@@ -185,7 +185,7 @@
     "    test_dataset = hdf5_file.create_dataset(test_dataset_label, shape=(0,), maxshape=(None,), dtype=dt)\n",
     "    \n",
     "    with open(input_file, 'r') as f:\n",
-    "        for line in tqdm(f, desc=\"Processing sequences\", total=min(total_sequences, max_sequences_to_read)):\n",
+    "        for line in tqdm(f, desc=\"Processing sequences\", initial=1, total=min(total_sequences, max_sequences_to_read)):\n",
     "            seq = line.strip().split(\"\\t\")[2]\n",
     "            if not seq:\n",
     "                continue\n",
@@ -214,6 +214,7 @@
     "            sequences_read += 1\n",
     "            if sequences_read == max_sequences_to_read:\n",
     "                break\n",
+    "\n",
     "\n",
     "print(f\"Finished processing.\")\n",
     "print(f\"\\tTrain sequences:\\t{train_count:,}\\t({(train_count / sequences_read)*100:.2f}%)\")\n",
