--- a/data_to_hdf5_v3.ipynb
+++ b/data_to_hdf5_v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,17 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_file = '/mnt/f/hprc/hprc-v1.1-mc-chm13_segments.gfa'\n",
-    "output_file = '/mnt/f/hprc/segments_f.hdf5'"
+    "output_file = '/mnt/f/hprc/segments.hdf5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing sequences: 100%|██████████| 50000/50000 [00:02<00:00, 19840.42it/s]\n"
+      "Processing sequences: 100%|██████████| 50000/50000 [00:02<00:00, 20419.44it/s]\n"
      ]
     },
     {
@@ -166,9 +166,9 @@
      "output_type": "stream",
      "text": [
       "Finished processing.\n",
-      "\tTrain sequences:\t39,956\t(79.91%)\n",
-      "\tValidation sequences:\t4,995\t(9.99%)\n",
-      "\tTest sequences:\t\t5,049\t(10.10%)\n"
+      "\tTrain sequences:\t40,020\t(80.04%)\n",
+      "\tValidation sequences:\t4,956\t(9.91%)\n",
+      "\tTest sequences:\t\t5,024\t(10.05%)\n"
      ]
     }
    ],
