--- a/node_feature_embedding_mlm_3.ipynb
+++ b/node_feature_embedding_mlm_3.ipynb
@@ -884,6 +884,63 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9e8414a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset = DNADataset(hdf5_filename=input_filename, split=test_dataset_label, chunk_size=512, overlap=0)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=0, collate_fn=collate_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3175e55c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(model, test_loader, criterion, device):\n",
+    "    model.eval()\n",
+    "\n",
+    "    total_test_loss = 0\n",
+    "    correct_predictions = 0\n",
+    "    total_samples = 0\n",
+    "\n",
+    "    # disable gradient calculation\n",
+    "    with torch.no_grad():  \n",
+    "        for batch_inputs, batch_labels in tqdm(test_loader):\n",
+    "            batch_inputs = batch_inputs.to(device)\n",
+    "            batch_labels = batch_labels.to(device)\n",
+    "\n",
+    "            # Forward pass\n",
+    "            outputs = model(batch_inputs)\n",
+    "\n",
+    "            # Calculate loss\n",
+    "            adjusted_labels = batch_labels.clone()\n",
+    "            adjusted_labels[adjusted_labels == test_dataset.padding_index] = -100  # Ignore padding\n",
+    "            adjusted_labels[adjusted_labels == test_dataset.mask_token_index] = -100  # Ignore masked positions\n",
+    "            valid_label_mask = (adjusted_labels >= 0) & (adjusted_labels <= 3)\n",
+    "            adjusted_labels[~valid_label_mask] = -100  # Ignore invalid labels\n",
+    "\n",
+    "            loss = criterion(outputs.view(-1, test_dataset.vocab_size - 2), adjusted_labels.view(-1))\n",
+    "            total_test_loss += loss.item()\n",
+    "\n",
+    "            # Calculate accuracy (optional, for classification tasks)\n",
+    "            _, predicted = torch.max(outputs, dim=-1)\n",
+    "            mask = adjusted_labels != -100\n",
+    "            correct_predictions += (predicted[mask] == adjusted_labels[mask]).sum().item()\n",
+    "            total_samples += mask.sum().item()\n",
+    "\n",
+    "    # Calculate average test loss and accuracy\n",
+    "    avg_test_loss = total_test_loss / len(test_loader)\n",
+    "    accuracy = correct_predictions / total_samples * 100\n",
+    "\n",
+    "    return avg_test_loss, accuracy\n"
+   ]
   }
  ],
  "metadata": {
